# opencli-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN_collection_nodes.md  README.md  TESTING.md  alembic.ini  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  start.sh
agent/: Dockerfile  entrypoint.sh
backend/: __init__.py  agent_server.py  browser_pool.py  config.py  database.py  main.py  scheduler.py  ws_agent_manager.py
backend/channels/: __init__.py  api_channel.py  base.py  cli_channel.py  opencli_channel.py  registry.py  rss_channel.py  web_scraper_channel.py
backend/executor/: __init__.py  base.py  celery_exec.py  local.py
backend/migrations/: env.py
backend/models/: __init__.py  agent.py  base.py  browser.py  edge_node.py  notification.py  provider.py  record.py  schedule.py  source.py  task.py  worker.py
backend/notifiers/: __init__.py  base.py  dingtalk_notifier.py  email_notifier.py  feishu_notifier.py  registry.py  webhook_notifier.py  wecom_notifier.py
backend/pipeline/: __init__.py  ai_processor.py  collector.py  events.py  normalizer.py  notifier_dispatch.py  pipeline.py  runner.py  storer.py
backend/processors/: __init__.py  base.py  claude_processor.py  external_processor.py  local_processor.py  openai_processor.py  registry.py
backend/schemas/: agent.py  browser.py  common.py  edge_node.py  notification.py  provider.py  record.py  schedule.py  source.py  task.py  worker.py
backend/services/: browser_service.py  record_service.py  schedule_service.py  source_service.py  task_service.py
backend/worker/: beat_schedule.py  celery_app.py  tasks.py
chrome/: Dockerfile  entrypoint.sh  nginx-cdp.conf  nginx-cdp.conf.template
chrome/extension-src/: .gitkeep  manifest.json  package-lock.json  package.json
docs/: schema.md
examples/external_http/: README.md  anthropic_tagger.py  dify_webhook.md  mcp_proxy.md  pydantic_ai_tagger.py  smoke.py  stub.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: build-extension.sh  chrome-pool.sh  install-agent.sh  patch-opencli.js
tests/: conftest.py
tests/integration/: test_agents_api.py  test_dashboard_api.py  test_notifications_api.py  test_opencli_channel_api.py  test_providers_api.py  test_records_api.py  test_schedules_api.py  test_sources_api.py  (+4 more)
(+97 files in other folders)
